sshの挙動確認

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="mytabs.js">//</script>
-    <title>川西市のあれこれ</title>
+    <title>川西市のあれこれえ！！！</title>
     <link rel="stylesheet" type="text/css" href="mysights.css"/>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
 </head>
